Fix legacy javax compatibility and Java 17 tests